--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "b630eb2b-1477-49e4-bceb-4d07c157d578"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
